# rust-kvs

./: Cargo.toml  cli.yml
examples/: 1000.txt  1000_structs_serde.rs  serde.rs  serde_ron.rs  t.txt
src/: lib.rs
