[package]
name = "kvs"
version = "0.1.0"
authors = ["anton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["yaml"], version = "2.33.0" }

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.0"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false
